--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
-datasource.url=jdbc:postgresql://127.0.0.1:5432/cinema
-datasource.username=postgres
-datasource.password=2236
+spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
+spring.datasource.username=postgres
+spring.datasource.password=2236
+#---
+spring.liquibase.driver-class-name=org.postgresql.Driver
+spring.liquibase.enabled=true
+spring.liquibase.drop-first=false
+spring.liquibase.change-log=classpath:db/changelog/db.changelog.xml
+spring.liquibase.default-schema=public
