fix: исправить конфигурацию тестов с liquibase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.liquibase.enabled=true
 spring.liquibase.drop-first=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog.xml
 spring.liquibase.default-schema=public
+spring.liquibase.url=jdbc:postgresql://localhost:5432/cinema
