feat: Добавить модуль для подключения к Kinopoisk API

--- a/cinema-main-service/pom.xml
+++ b/cinema-main-service/pom.xml
@@ -19,6 +19,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>ru.cinema</groupId>
+            <artifactId>kinopoisk-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
