--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>cinema-main-service</module>
+        <module>kinopoisk-api</module>
     </modules>
 
     <parent>
