feat: добавить получение всех фильмов из микросервиса films с помощью RestTemplate

--- a/cinema-main-service/src/main/resources/application.properties
+++ b/cinema-main-service/src/main/resources/application.properties
@@ -1,11 +1,16 @@
+server.port=8080
+#
 spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
 spring.datasource.username=postgres
 spring.datasource.password=2236
+#
 spring.liquibase.driver-class-name=org.postgresql.Driver
 spring.liquibase.enabled=true
 spring.liquibase.drop-first=false
-spring.liquibase.change-log=classpath:db/changelog/db.changelog.xml
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog.xml
 spring.liquibase.default-schema=public
+#
+films.api.url=http://localhost:9090/
 #---
 spring.config.activate.on-profile=test
 spring.datasource.url=jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
@@ -13,6 +18,6 @@ spring.datasource.username=
 spring.datasource.password=
 spring.liquibase.enabled=true
 spring.liquibase.drop-first=false
-spring.liquibase.change-log=classpath:db/changelog/db.changelog.xml
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog.xml
 spring.liquibase.default-schema=public
 spring.liquibase.url=jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
