feat: дбавить логирование в контроллеры сервисов

--- a/film-service/src/main/resources/application.properties
+++ b/film-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=9090
+logging.level.root=INFO
+#
 kinopoisk.api.key=ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E
 kinopoisk.api.headers=X-API-KEY
 kinopoisk.api.url=https://api.kinopoisk.dev/v1.4
