--- a/cinema-main-service/src/main/resources/application.properties
+++ b/cinema-main-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+logging.level.root=INFO
 #
 spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
 spring.datasource.username=postgres
