--- a/cinema-main-service/src/main/resources/application.properties
+++ b/cinema-main-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 logging.level.root=INFO
+default.backdrop.url.path=/images/default_background_film.jpg
 #
 spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
 spring.datasource.username=postgres
