feat: добавить сборку и разворот приложения в docker

--- a/cinema-main-service/src/main/resources/application.properties
+++ b/cinema-main-service/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-server.port=8080
+server.port=${MAIN_SERVER_PORT:8080}
 logging.level.root=INFO
 default.backdrop.url.path=/images/background_all.jpg
 #
-spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
-spring.datasource.username=postgres
-spring.datasource.password=2236
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/cinema}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:2236}
+#
+films.api.url=${FILM_API_URL:http://localhost:9090/}
 #
 spring.liquibase.driver-class-name=org.postgresql.Driver
 spring.liquibase.enabled=true
 spring.liquibase.drop-first=false
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog.xml
 spring.liquibase.default-schema=public
-#
-films.api.url=http://localhost:9090/
 #---
 spring.config.activate.on-profile=test
 spring.datasource.url=jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
