--- a/film-service/src/main/resources/application.properties
+++ b/film-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=9090
+server.port=${SERVER_PORT:9090}
 logging.level.root=INFO
 #
-kinopoisk.api.key=ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E
-kinopoisk.api.headers=X-API-KEY
-kinopoisk.api.url=https://api.kinopoisk.dev/v1.4
+kinopoisk.api.key=${KINOPOISK_API_KEY:ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E}
+kinopoisk.api.headers=${KINOPOISK_API_HEADERS:X-API-KEY}
+kinopoisk.api.url=${KINOPOISK_API_URL:https://api.kinopoisk.dev/v1.4}
 #
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/films}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
