--- a/cinema-main-service/pom.xml
+++ b/cinema-main-service/pom.xml
@@ -7,9 +7,11 @@
         <groupId>ru.cinema</groupId>
         <artifactId>cinema</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>cinema-main-service</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
