fix: исправить ошибку с отсутствием изображений залов в UI, при запуске в docker контейнере

--- a/cinema-main-service/Dockerfile
+++ b/cinema-main-service/Dockerfile
@@ -1,3 +1,4 @@
 FROM amazoncorretto:17
 COPY target/*.jar app.jar
+COPY src/main/resources/static/halls cinema-main-service/src/main/resources/static/halls
 ENTRYPOINT ["java", "-jar", "/app.jar"]
