feat: добавить Spring Cloud

--- a/film-service/src/main/resources/application.properties
+++ b/film-service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-server.port=${SERVER_PORT:9090}
+server.port=${SERVER_PORT:8081}
+spring.application.name=film-service
 logging.level.root=INFO
+#
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICE_URL:http://localhost:8761/eureka}
 #
 kinopoisk.api.key=${KINOPOISK_API_KEY:ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E}
 kinopoisk.api.headers=${KINOPOISK_API_HEADERS:X-API-KEY}
