--- a/cinema-main-service/src/main/resources/application.properties
+++ b/cinema-main-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=${MAIN_SERVER_PORT:8080}
+spring.application.name=cinema-main
 logging.level.root=INFO
 default.backdrop.url.path=/images/background_all.jpg
 #
@@ -6,7 +7,7 @@ spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/c
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:2236}
 #
-films.api.url=${FILM_API_URL:http://localhost:9090/}
+films.api.url=${FILM_API_URL:http://localhost:8765/film-service}
 #
 spring.liquibase.driver-class-name=org.postgresql.Driver
 spring.liquibase.enabled=true
