--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: '3.8'
 services:
+  eureka-server:
+    build:
+      context: ./eureka-server
+      dockerfile: Dockerfile
+    image: eureka-server
+    container_name: eureka-server
+    ports:
+      - "8761:8761"
+    environment:
+      EUREKA_SERVER_PORT: 8761
+      EUREKA_CLIENT_SERVICE_URL: http://localhost:8761/eureka
+
   film-service:
     build:
       context: ./film-service
@@ -7,14 +19,16 @@ services:
     image: film-service
     container_name: film-service
     ports:
-      - "9090:9090"
+      - "8081:8081"
     depends_on:
       - film-db
+      - eureka-server
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://film-db:5432/films
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 2236
-      FILM_SERVER_PORT: 9090
+      FILM_SERVER_PORT: 8081
+      EUREKA_CLIENT_SERVICE_URL: http://localhost:8761/eureka
       KINOPOISK_API_KEY: ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E
       KINOPOISK_API_HEADERS: X-API-KEY
       KINOPOISK_API_URL: https://api.kinopoisk.dev/v1.4
@@ -38,6 +52,7 @@ services:
     ports:
       - "8080:8080"
     depends_on:
+      - eureka-server
       - cinema-db
       - film-service
     environment:
@@ -45,7 +60,7 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 2236
       MAIN_SERVER_PORT: 8080
-      FILM_API_URL: http://film-service:9090
+      FILM_API_URL: http://localhost:8765/film-service
 
   cinema-db:
     image: postgres:14.7-alpine
@@ -56,3 +71,19 @@ services:
       POSTGRES_PASSWORD: 2236
     ports:
       - "6542:5432"
+
+  api-gateway:
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    image: api-gateway
+    container_name: api-gateway
+    ports:
+      - "8765:8765"
+    depends_on:
+      - eureka-server
+      - film-service
+      - cinema-main-service
+    environment:
+      EUREKA_SERVER_PORT: 8765
+      EUREKA_CLIENT_SERVICE_URL: http://localhost:8761/eureka
