--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${EUREKA_SERVER_PORT:8765}
+server.port=${API_GATEWAY_PORT:8765}
 spring.application.name=api-gateway
 #
 eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICE_URL:http://localhost:8761/eureka}
