--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,14 +21,14 @@ services:
     ports:
       - "8081:8081"
     depends_on:
-      - film-db
       - eureka-server
+      - film-db
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://film-db:5432/films
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 2236
       FILM_SERVER_PORT: 8081
-      EUREKA_CLIENT_SERVICE_URL: http://localhost:8761/eureka
+      EUREKA_CLIENT_SERVICE_URL: http://eureka-server:8761/eureka
       KINOPOISK_API_KEY: ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E
       KINOPOISK_API_HEADERS: X-API-KEY
       KINOPOISK_API_URL: https://api.kinopoisk.dev/v1.4
@@ -52,7 +52,6 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - eureka-server
       - cinema-db
       - film-service
     environment:
@@ -60,7 +59,7 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 2236
       MAIN_SERVER_PORT: 8080
-      FILM_API_URL: http://localhost:8765/film-service
+      FILM_API_URL: http://api-gateway:8765/film-service
 
   cinema-db:
     image: postgres:14.7-alpine
@@ -85,5 +84,5 @@ services:
       - film-service
       - cinema-main-service
     environment:
-      EUREKA_SERVER_PORT: 8765
-      EUREKA_CLIENT_SERVICE_URL: http://localhost:8761/eureka
+      API_GATEWAY_PORT: 8765
+      EUREKA_CLIENT_SERVICE_URL: http://eureka-server:8761/eureka
