feat: в микросевисе film-service перейти с RestTemplate на OpenFeign

--- a/film-service/src/main/resources/application.properties
+++ b/film-service/src/main/resources/application.properties
@@ -4,8 +4,8 @@ logging.level.root=INFO
 #
 eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICE_URL:http://localhost:8761/eureka}
 #
-kinopoisk.api.key=${KINOPOISK_API_KEY:ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E}
-kinopoisk.api.headers=${KINOPOISK_API_HEADERS:X-API-KEY}
+kinopoisk.api.header=${KINOPOISK_API_HEADER:X-API-KEY}
+kinopoisk.api.token=${KINOPOISK_API_TOKEN:ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E}
 kinopoisk.api.url=${KINOPOISK_API_URL:https://api.kinopoisk.dev/v1.4}
 #
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/films}
