--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
       SPRING_DATASOURCE_PASSWORD: 2236
       FILM_SERVER_PORT: 8081
       EUREKA_CLIENT_SERVICE_URL: http://eureka-server:8761/eureka
-      KINOPOISK_API_KEY: ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E
-      KINOPOISK_API_HEADERS: X-API-KEY
+      KINOPOISK_API_HEADER: X-API-KEY
+      KINOPOISK_API_TOKEN: ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E
       KINOPOISK_API_URL: https://api.kinopoisk.dev/v1.4
 
   film-db:
