--- a/film-service/src/main/resources/application.properties
+++ b/film-service/src/main/resources/application.properties
@@ -8,6 +8,17 @@ kinopoisk.api.header=${KINOPOISK_API_HEADER:X-API-KEY}
 kinopoisk.api.token=${KINOPOISK_API_TOKEN:ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E}
 kinopoisk.api.url=${KINOPOISK_API_URL:https://api.kinopoisk.dev/v1.4}
 #
+#spring.cloud.stream.bindings.input.destination=films
+#spring.cloud.stream.bindings.input.content-type=application/json
+#spring.cloud.stream.kafka.binder.consumer-properties.spring.json.trusted.packages=*
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=cinema
+spring.kafka.consumer.properties.spring.json.type.mapping=requestAddFilms:ru.films.model.dto.RequestAddFilms
+#
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/films}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:2236}
