--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>film-service</module>
         <module>eureka-server</module>
         <module>api-gateway</module>
+        <module>authorization-server</module>
     </modules>
 
     <parent>
