feat: подготовка тестовых классов на контроллер film-service

--- a/film-service/src/main/resources/application.properties
+++ b/film-service/src/main/resources/application.properties
@@ -8,9 +8,6 @@ kinopoisk.api.header=${KINOPOISK_API_HEADER:X-API-KEY}
 kinopoisk.api.token=${KINOPOISK_API_TOKEN:ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E}
 kinopoisk.api.url=${KINOPOISK_API_URL:https://api.kinopoisk.dev/v1.4}
 #
-#spring.cloud.stream.bindings.input.destination=films
-#spring.cloud.stream.bindings.input.content-type=application/json
-#spring.cloud.stream.kafka.binder.consumer-properties.spring.json.trusted.packages=*
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
@@ -31,3 +28,13 @@ spring.liquibase.default-schema=public
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+#---
+spring.config.activate.on-profile=test
+spring.datasource.url=jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
+spring.datasource.username=
+spring.datasource.password=
+spring.liquibase.enabled=true
+spring.liquibase.drop-first=false
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog.xml
+spring.liquibase.default-schema=public
+spring.liquibase.url=jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
