--- a/film-service/src/main/resources/application.properties
+++ b/film-service/src/main/resources/application.properties
@@ -30,11 +30,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 #---
 spring.config.activate.on-profile=test
-spring.datasource.url=jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${TEST_CONTAINER.URL}
+spring.datasource.username=${TEST_CONTAINER.USERNAME}
+spring.datasource.password=${TEST_CONTAINER.PASSWORD}
 spring.liquibase.enabled=true
 spring.liquibase.drop-first=false
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog.xml
 spring.liquibase.default-schema=public
-spring.liquibase.url=jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
