feat: добавить keycloak в docker-compose и pom.xml

--- a/film-service/src/main/resources/application.properties
+++ b/film-service/src/main/resources/application.properties
@@ -28,6 +28,16 @@ spring.liquibase.default-schema=public
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+#
+keycloak.realm=spmia-realm
+keycloak.auth-server-url=http://localhost:8082/realms/spmia-realm
+keycloak.ssl-required=external
+keycloak.resource=cinema
+keycloak.credentials.secret=BLhbyqtW5gKkDNs7AYedx5irJNXkb0Kl
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+keycloak.security-constraints[0].authRoles[0]=ROLE_USER
+keycloak.security-constraints[0].securityCollections[0].patterns[0]=/protected/*
 #---
 spring.config.activate.on-profile=integration-test
 
